[tool.poetry]
name = "duckdash"
version = "0.1.0"
description = "Monitor your Huey tasks"
authors = ["Misha Behersky <bmwant@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
huey = "^2.4.3"
textual = "^0.1.18"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
